# Software-Computing

./: .gitignore  README.md
notebook/: 01_code_vectorization.ipynb  02_multi_languages.ipynb  03_parallel.ipynb  04_webAPI.ipynb
optimization/: Makefile  initial.cpp  omp.cpp  soa.cpp  vect.cpp
sktest/: CMakeLists.txt  LICENSE  MANIFEST.in  README.md  SOURCES.txt  pyproject.toml  setup.py
sktest/cython_hello_world/: __init__.py  __version__.py.in
sktest/cython_hello_world/lib/: __init__.pxd  hello.pxd
sktest/cython_hello_world/source/: CMakeLists.txt  hello.pyx
sktest/include/: hello.h
sktest/src/: hello.cxx
slides/: 01_code_vectorization.slides.html  02_multi_languages.slides.html  03_parallel.slides.html  04_webAPI.slides.html
web/server/: app.js  database.js  package.json  scheme.sql
